# data-engineering-principles-and-practice-final-project

./: .env.example  .gitignore  README.md  docker-compose.yml  kanban_tasks.md  main.py  pyproject.toml  scaffold.py
artifacts/: diagrams.md  erd.md  flask_api_spec.md
docker/: Dockerfile.api  Dockerfile.pipeline
scripts/: smoketest.py
sql/: 01_create_tables.sql  01_dims.sql  02_facts.sql  02_seed_source_dim.sql  03_indexes.sql  04_views.sql  05_seed_sources.sql  06_seed_companies.sql  07_populate_dates.sql
src/pipeline/: run_pipeline.py
src/pipeline/extract/: alphavantage_source.py  finnhub_source.py  finra_source.py  http_client.py  mongo_store.py  newsapi_source.py  run_logger.py  yfinance_source.py
src/pipeline/load/: db.py  warehouse.py
src/pipeline/transform/: aggregate.py  build_aggregates.py  clean.py  load_headlines.py  load_metrics.py  load_prices.py  score_sentiment.py  sentiment.py
