[project]
name = "data-engineering-principles-and-practice-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "charset-normalizer>=3.4.7",
    "curl-cffi>=0.15.0",
    "psycopg[binary]>=3.3.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tenacity>=9.1.4",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.40",
]
